<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sylwi.baza_telefonow.MainActivity2"
    android:shrinkColumns="*"
    android:stretchColumns="2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/producentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/producentET"
            android:text="@string/producentTV" />

        <EditText
            android:id="@+id/producentET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/modelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/modelET"
            android:text="@string/modelTV" />

        <EditText
            android:id="@+id/modelET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:inputType="textPersonName"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/wersjaAndroidaTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wersja_androidaTV"
            android:labelFor="@id/wersjaAndroidaET"/>

        <EditText
            android:id="@+id/wersjaAndroidaET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/wwwTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/wwwET"
            android:text="@string/wwwTV" />

        <EditText
                android:id="@+id/wwwET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonWWW"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonWWW" />

        <Button
            android:id="@+id/buttonAnuluj"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnuluj" />

        <Button
            android:id="@+id/buttonZapisz"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonZapisz" />

    </TableRow>

</TableLayout>
